--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body{
+#countlabel{
+    display: block;
+    text-align: center;
+    font-size: 10em;
     font-family: Arial, Helvetica, sans-serif;
-    font-size:2em ;
 }
