--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@
     font-size: 10em;
     font-family: Arial, Helvetica, sans-serif;
 }
+#btnContainer{
+    text-align: center;
+}
+.buttons{
+    padding: 10px 20px;
+    font-size:1.5em;
+    color: white;
+    background-color:rgb(36, 102, 225);
+}
