--- a/style.css
+++ b/style.css
@@ -12,4 +12,10 @@
     font-size:1.5em;
     color: white;
     background-color:rgb(36, 102, 225);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.25s;
+}
+.buttons:hover{
+  background-color: black;
 }
