--- a/style.css
+++ b/style.css
@@ -27,5 +27,8 @@ body{
 #myButton{
     font-size: 3em;
     padding: 5px 25px;
-    border-radius: ;
+    border-radius: 5px ;
+}
+#myLabel{
+    font-size: 3em;
 }
