--- a/style.css
+++ b/style.css
@@ -1,34 +1,7 @@
-/*#countLabel{
-    display: block;
-    text-align: center;
-    font-size: 10em;
-    font-family: Arial, Helvetica, sans-serif;
-}
-#btnContainer{
-    text-align: center;
-}
-.buttons{
-    padding: 10px 20px;
-    font-size:1.5em;
-    color: white;
-    background-color:rgb(36, 102, 225);
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.25s;
-}
-.buttons:hover{
-  background-color: black;
-}*/
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-
-}
-#myButton{
-    font-size: 3em;
-    padding: 5px 25px;
-    border-radius: 5px ;
-}
-.myLabels{
-    font-size: 3em;
+    font-size: 2em;
+}.
+#mySubmit{
+    font-size: 1em;
 }
